Bug 1421009 - Don't schedule idle callback if window is shutting down. r=bkelly, a=gchang