dom/base/nsGlobalWindow.cpp
@@ -913,6 +913,10 @@ nsGlobalWindow::RequestIdleCallback(JSContext* aCx,
   MOZ_RELEASE_ASSERT(IsInnerWindow());
   AssertIsOnMainThread();
 
+  if (mInnerObjectsFreed) {
+    return 0;
+  }
+
   uint32_t handle = mIdleRequestCallbackCounter++;
 
   RefPtr<IdleRequest> request =
